fixed google logo alignment

--- a/_sass/_formatting.scss
+++ b/_sass/_formatting.scss
@@ -44,6 +44,10 @@ p.subheader {
   border: none;
 }
 
+.no-bottom-margin {
+  margin-bottom: 0em;
+}
+
 hr {
   width: 4em;
   height: $base-border-height;
